<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:stretchColumns = "*"
    >


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_span="4"
            android:gravity="center"
            android:text="@string/text_layout"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_plus_minus"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_cent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_C" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_plus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_minus" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_mul" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_div" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_dot" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/button18"
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:text="@string/button_equal" />

    </TableRow>
</TableLayout>